# polimi-scipro-Pyassignment

./: NW.md  README.md  pyproject.toml
assignment/: nw.py
